base/yarn-ts/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: synesis-yarn
  labels:
    app.kubernetes.io/name: synesis-yarn
    app.kubernetes.io/component: yarn
spec:
  to:
    kind: Service
    name: synesis-yarn
  port:
    targetPort: http
  tls:
    termination: edge
